_build/_log
### Starting build.
# Target: ftest.ml.depends, tags: { extension:ml, file:ftest.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules ftest.ml > ftest.ml.depends
# Target: gfile.mli.depends, tags: { extension:mli, file:gfile.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules gfile.mli > gfile.mli.depends # cached
# Target: graph.mli.depends, tags: { extension:mli, file:graph.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules graph.mli > graph.mli.depends # cached
# Target: graph.cmi, tags: { byte, compile, extension:mli, file:graph.mli, interf, ocaml, quiet }
ocamlc.opt -c -o graph.cmi graph.mli # cached
# Target: tools.mli.depends, tags: { extension:mli, file:tools.mli, ocaml, ocamldep, quiet }
ocamldep.opt -modules tools.mli > tools.mli.depends # cached
# Target: tools.cmi, tags: { byte, compile, extension:mli, file:tools.mli, interf, ocaml, quiet }
ocamlc.opt -c -o tools.cmi tools.mli # cached
# Target: gfile.cmi, tags: { byte, compile, extension:mli, file:gfile.mli, interf, ocaml, quiet }
ocamlc.opt -c -o gfile.cmi gfile.mli # cached
# Target: ftest.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ftest.cmo, file:ftest.ml, implem, ocaml, quiet }
ocamlc.opt -c -o ftest.cmo ftest.ml
+ ocamlc.opt -c -o ftest.cmo ftest.ml
File "ftest.ml", line 29, characters 40-51:
29 |         let () = export_visible outfile final_graph _source _sink in ()
                                             ^^^^^^^^^^^
Error: This expression has type Tools.labels Graph.graph
       but an expression was expected of type string Graph.graph
       Type Tools.labels is not compatible with type string 
Command exited with code 2.
# Compilation unsuccessful.
